--- a/deposito.html
+++ b/deposito.html
@@ -80,15 +80,20 @@
           How to create a debate? </div>
       </div>
       <div class="col-lg-3 col-12 px-md-3">
-        <div  class="mt-4 pt-2 fs-6c fw-lighter">
-          In Italy there are some laws that limit the disposition of the body after death, according to the dominant religious tradition.
-          Religions other than Catholicism are excluded. <br> We used the Speculative Design process to make people feel what it means to have no choice in death. </div>
+        <div  class="mt-4 pt-2 fs-6c ">
+          <span class="opacity  fw-lighter">
+            In Italy there are some laws that limit the disposition of the body after death, according to the dominant religious tradition.
+          Religions other than Catholicism are excluded. <br>
+          We used the</span> Speculative Design process to make people feel what it means to have no choice in death. </div>
+          </span>
       </div>
       <div class="col-lg-3 col-12 px-md-3">
-        <div  class="mt-lg-4 pt-lg-2 fs-6c fw-lighter">
+        <div  class="mt-lg-4 pt-lg-2 fs-6c">
 
-        We create a scenario where people are obliged to be cremated and where all the ashes are placed in a single urn iside the “Deposito Cinerario Italiano” (“Italian Cinerary Depot”).
+        <span class="opacity  fw-lighter">
+          We create a scenario where people are obliged to be cremated and where all the ashes are placed in a single urn iside the “Deposito Cinerario Italiano” (“Italian Cinerary Depot”).
         <br> The user is pushed to act as an agent for collective burial, where all deceased are equals and indistinct. </div>
+          </span>
       </div>
     </div>
 
@@ -109,16 +114,20 @@
           1. Research and concept definition </div>
       </div>
       <div class="col-lg-3 col-12 px-lg-3">
-        <div  class="mt-4 pt-2 fs-6c fw-lighter">
-          It’s not easy to make people think about death,
+        <div  class="mt-4 pt-2 fs-6c">
+          <span class="opacity  fw-lighter">
+            It’s not easy to make people think about death,
         so we made a lot of research about Speculative Design and on
         how to involve user’s emotions.
+        </span>
       </div>
       </div>
       <div class="col-lg-3 col-12 px-lg-3">
-        <div  class="mt-lg-4 pt-lg-2 fs-6c fw-lighter">
-          At the end we decided to create a
-          distopian world where users is a main part of the project.
+        <div  class="mt-lg-4 pt-lg-2 fs-6c">
+          <span class="opacity  fw-lighter">
+            At the end we decided to create a
+          </span>distopian world where users is a main part of the project.
+          </span>
         </div>
     </div>
     </div>
@@ -130,12 +139,14 @@
           2. The limits of the project </div>
       </div>
       <div class="col-lg-3 col-12 px-lg-3">
-        <div  class="mt-4 pt-2 fs-6c fw-lighter">
-          The idea was to create a big cinerary urn,
+        <div  class="mt-4 pt-2 fs-6c">
+          <span class="opacity  fw-lighter">
+            The idea was to create a big cinerary urn,
         but we had the space limit of one square meter, so we
         designed a space where the user doesn’t have to move, he
         should only interact with a tablet and a touch screen on a small table.
         From that position the user can easily watch the urn.
+        </span>
       </div>
       </div>
       <div class="col-lg-3 col-12 px-lg-3">
@@ -161,16 +172,20 @@
           3. Create and test prototypes</div>
       </div>
       <div class="col-lg-3 col-12 px-lg-3">
-        <div  class="mt-4 pt-2 fs-6c fw-lighter">
-          We created physical prototypes to test the space and the elements dimension.
-        We also realized different digital prototypes to test the user interaction
+        <div  class="mt-4 pt-2 fs-6c ">
+          <span class="opacity  fw-lighter">
+            We created </span>physical prototypes<span class="opacity  fw-lighter"> to test the space and the elements dimension.
+        We also realized different </span>digital prototypes<span class="opacity  fw-lighter"> (using HTML, CSS and JavaScript) to test the user interaction
         with the digital intarface.
+        </span>
       </div>
       </div>
       <div class="col-lg-3 col-12 px-lg-3">
-        <div  class="mt-lg-4 pt-lg-2 fs-6c fw-lighter">
-          The goal was to create an interface that was easy
+        <div  class="mt-lg-4 pt-lg-2 fs-6c ">
+          <span class="opacity  fw-lighter">
+            The goal was to create an interface that was easy
           for everyone to use, people from every culture and age.
+          </span>
         </div>
     </div>
     </div>
@@ -182,8 +197,10 @@
           4. Build the final project </div>
       </div>
       <div class="col-lg-3 col-12 px-lg-3">
-        <div  class="mt-4 pt-2 fs-6c fw-lighter">
-          Thanks to wood, steel, electrical and mechanical components and thanks to a lot of error, we finally created the final project.
+        <div  class="mt-4 pt-2 fs-6c ">
+          <span class="opacity  fw-lighter">
+            Thanks to wood, steel, electrical and mechanical components and thanks to a lot of error, we finally created the final project.
+            </span>
       </div>
       </div>
       <div class="col-lg-3 col-12 px-lg-3">
@@ -216,18 +233,22 @@
           5. Show it to everyone!</div>
       </div>
       <div class="col-lg-3 col-12 px-lg-3">
-        <div  class="mt-4 pt-2 fs-6c fw-lighter">
-        Unfortunately, due to 2020 Corona Virus pandemic, we were unable to
-        do the exhibition, but we tested it to our collegues and teacher.
+        <div  class="mt-4 pt-2 fs-6c ">
+        <span class="opacity  fw-lighter">
+          Unfortunately, </span>due to 2020 Corona Virus pandemic, we were unable to
+        do the exhibition,<span class="opacity  fw-lighter"> but we tested it to our collegues and teacher.
         The impact was effective, everyone was impressed by our job.
-
+        </span>
       </div>
       </div>
       <div class="col-lg-3 col-12 px-lg-3">
-        <div  class="mt-lg-4 pt-lg-2 fs-6c fw-lighter">
-          The project was also mentioned as a case study in an
+        <div  class="mt-lg-4 pt-lg-2 fs-6c">
+          <span class="opacity  fw-lighter">
+            The project was also mentioned as a case study in an</span>
           <a class="link text-white hover_green text-decoration-underline" target="_blank" href="https://speculativeedu.eu/case-study-communicative-machines-speculating-on-death/">article of SpeculativeEdu</a>.
-           In the future we hope to show the project in the exhibition.
+           <span class="opacity  fw-lighter">
+             In the future we hope to show the project in the exhibition.
+           </span>
         </div>
     </div>
     </div>
