--- a/izi.html
+++ b/izi.html
@@ -91,17 +91,21 @@
           Why should people <br>collaborate on the net? </div>
       </div>
       <div class="col-lg-3 col-12 px-md-3">
-        <div  class="mt-4 pt-2 fs-6c fw-lighter">
+        <div  class="mt-4 pt-2 fs-6c ">
+            <span class="opacity  fw-lighter">
           Every day milion of people surf on the net.
-        The goal of this web experience is to make more people collaborate in a productive way.
+        The goal of this web experience is to </span>make more people collaborate in a productive way.<span class="opacity  fw-lighter">
         In the world there are a lot of fanbases that share their passion.
         Whenever a singer is about to release a music album, fans go to great lengths to find out something about it.
+        </span>
       </div>
     </div>
       <div class="col-lg-3 col-12 px-md-3">
-        <div  class="mt-lg-4 pt-lg-2 fs-6c fw-lighter">
-          Here comes the idea to create a “photo mosaic”: an album cover created by many small images.
+        <div  class="mt-lg-4 pt-lg-2 fs-6c ">
+            <span class="opacity  fw-lighter">
+          Here comes the idea to </span>create a “photo mosaic”: an album cover created by many small images.<span class="opacity  fw-lighter">
           Fans have to send a picture of themselves to discover the album cover, because this picture will be one of the small images that will complete the album cover.
+          </span>
           </div>
       </div>
     </div>
@@ -126,13 +130,17 @@
           1. Define the user journey and tools </div>
       </div>
       <div class="col-lg-3 col-12 px-lg-3">
-        <div  class="mt-4 pt-2 fs-6c fw-lighter">
-        The goal was to create a simple and intuitive web experience, so we designed only 3 pages, one with instructions, one where people can take the picture and one with the mosaic.
+        <div  class="mt-4 pt-2 fs-6c ">
+            <span class="opacity  fw-lighter">
+        The goal was to create a </span>simple and intuitive web experience, <span class="opacity  fw-lighter">so we designed only 3 pages, one with instructions, one where people can take the picture and one with the mosaic.
+        </span>
         </div>
       </div>
       <div class="col-lg-3 col-12 px-lg-3">
-        <div  class="mt-lg-4 pt-lg-2 fs-6c fw-lighter">
+        <div  class="mt-lg-4 pt-lg-2 fs-6c">
+            <span class="opacity  fw-lighter">
           We also defined the software scheme: everytime that a person send a picture, it will be stored in a digital space (Firebase) and than uploaded in the mosaic in the right position.
+          </span>
         </div>
     </div>
     </div>
@@ -144,8 +152,10 @@
           2. Define the UI </div>
       </div>
       <div class="col-lg-3 col-12 px-lg-3">
-        <div  class="mt-4 pt-2 fs-6c fw-lighter">
+        <div  class="mt-4 pt-2 fs-6c ">
+            <span class="opacity  fw-lighter">
         We decided to use a simple graphic that remebers the singer’s style. We wanted to enhance the mosaic.
+        </span>
       </div>
       </div>
       <div class="col-lg-3 col-12 px-lg-3">
@@ -178,13 +188,17 @@
           3. Create the algorithm</div>
       </div>
       <div class="col-lg-3 col-12 px-lg-3">
-        <div  class="mt-4 pt-2 fs-6c fw-lighter">
+        <div  class="mt-4 pt-2 fs-6c">
+            <span class="opacity  fw-lighter">
           We use the P5 library to code this project. It wasn’t easy to create the algorithm hat would allow the creation of the mosaic, infact we did a lot of tests.
+          </span>
       </div>
       </div>
       <div class="col-lg-3 col-12 px-lg-3">
-        <div  class="mt-lg-4 pt-lg-2 fs-6c fw-lighter">
-          At the end we created an algorithm that inserts the user picture in the position where there is the highest brightness affinity.
+        <div  class="mt-lg-4 pt-lg-2 fs-6c ">
+            <span class="opacity  fw-lighter">
+          At the end we created an</span> algorithm <span class="opacity  fw-lighter">that inserts the user picture in the position where there is the highest brightness affinity.
+          </span>
         </div>
     </div>
     </div>
@@ -196,9 +210,12 @@
           4. Try it! </div>
       </div>
       <div class="col-lg-3 col-12 px-lg-3">
-        <div  class="mt-4 pt-2 fs-6c fw-lighter">
+        <div  class="mt-4 pt-2 fs-6c ">
+            <span class="opacity  fw-lighter">
           We publish the website but the majority of picture were made by ourselves. Only a small group of people tried it, everyone was impressed by the result: the mosaic was very similar to the album cover.
+          </span>
          <a class="text-white hover_green text-decoration-underline" target="_blank" href="https://drawwithcode.github.io/2019-group-10-1/">Try it yourself! </a>
+
       </div>
       </div>
       <div class="col-lg-3 col-12 px-lg-3">
