--- a/jukebox.html
+++ b/jukebox.html
@@ -82,16 +82,21 @@
       </div>
       <div class="col-lg-3 col-12 px-md-3">
         <div  class="mt-4 pt-2 fs-6c fw-lighter">
+          <span class="opacity  fw-lighter">
           Brain activity gets worse the older we become, causing memory and decision making problems: this is especially true if an elderly person has to deal with Alzheimer’s disease as well.
         This knowledge was a trigger to our design work as we wants to slow down this process.  <br>
         Most games designed for seniors use music as therapy.
+        </span>
         </div>
       </div>
       <div class="col-lg-3 col-12 px-md-3">
         <div  class="mt-lg-4 pt-lg-2 fs-6c fw-lighter">
+
           The memory of the elderly is trained when they listen to songs from their youth.
+          <span class="opacity  fw-lighter">
           Thus was born Memory Jukebox: a game that recalls a mix between a classic radio and a juke box.
           When each piece is swiped through the apposite space, part of an old song is activated: the goal is to swipe all the pieces in the right order, in order to activate the full song.
+          </span>
         </div>
       </div>
     </div>
@@ -114,14 +119,18 @@
       </div>
       <div class="col-lg-3 col-12 px-lg-3">
         <div  class="mt-4 pt-2 fs-6c fw-lighter">
-        We did a research to find out which techniques are used to prevent demeza senile. We have found that many senior centers use karaoke and music therapy.
+          <span class="opacity  fw-lighter">
+        We did a research to </span>find out which techniques are used to prevent senile dementia <span class="opacity  fw-lighter">. We have found that many senior centers use karaoke and music therapy.
         No matter the age or the disease, it is always good to practice your brain and work on mental condition.
+        </span>
       </div>
       </div>
       <div class="col-lg-3 col-12 px-lg-3">
         <div  class="mt-lg-4 pt-lg-2 fs-6c fw-lighter">
+          <span class="opacity  fw-lighter">
           Having this in mind the idea of Memory Jukebox was born.
           After deep research about illnesses among elderly people we created our persona to have a sense of knowledge who will be a user of our game.
+            </span>
         </div>
     </div>
     </div>
@@ -134,12 +143,16 @@
       </div>
       <div class="col-lg-3 col-12 px-lg-3">
         <div  class="mt-4 pt-2 fs-6c fw-lighter">
+          <span class="opacity  fw-lighter">
         The goal was to create an entertaining game, which is easy to understand and use for people with different stages of an illness.
+          </span>
       </div>
       </div>
       <div class="col-lg-3 col-12 px-lg-3">
         <div  class="mt-lg-4 pt-md-2 fs-6c fw-lighter">
+          <span class="opacity  fw-lighter">
            We thought of creating easy-to-handle cubes, a few easy-to-press buttons and lights that make interaction more intuitive.
+            </span>
         </div>
     </div>
     </div>
@@ -162,13 +175,17 @@
       </div>
       <div class="col-lg-3 col-12 px-lg-3">
         <div  class="mt-4 pt-2 fs-6c fw-lighter">
-        To create the game we decided to use an Arduino Uno, a DFPlayer to play the music and an RFID reader to read the cubes connected to the RFID tags.
+          <span class="opacity  fw-lighter">
+        To create the game we decided to use </span>an Arduino Uno, a DFPlayer to play the music and an RFID reader <span class="opacity  fw-lighter">to read the cubes connected to the RFID tags.
+          </span>
       </div>
       </div>
       <div class="col-lg-3 col-12 px-lg-3">
         <div  class="mt-lg-4 pt-lg-2 fs-6c fw-lighter">
+          <span class="opacity  fw-lighter">
           To make the interaction clearer we used a rgb led strip.
           After several tests we arrived at the working prototype.
+          </span>
         </div>
     </div>
     </div>
@@ -181,12 +198,16 @@
       </div>
       <div class="col-lg-3 col-12 px-lg-3">
         <div  class="mt-4 pt-2 fs-6c fw-lighter">
-      To make the experience more interesting we designed an App. This App is an upgrade to the toy: not necessary to play but it unlocks many features such as inviting friends or personal selection of songs. In case the user doesn’t want it, random/system songs will be played.
+          <span class="opacity  fw-lighter">
+      To make the experience more interesting </span>we designed an App. <span class="opacity  fw-lighter">This App is an upgrade to the toy: not necessary to play but it unlocks many features such as inviting friends or personal selection of songs. In case the user doesn’t want it, random/system songs will be played.
+        </span>
       </div>
       </div>
       <div class="col-lg-3 col-12 px-lg-3">
         <div  class="mt-lg-4 pt-md-2 fs-6c fw-lighter">
+          <span class="opacity  fw-lighter">
           App is designed for elderly people, which will be users of the toy. Having this in mind we had to follow strict rules related to designing for people with some disabilities and who might not be used to approach apps and technology.
+            </span>
         </div>
     </div>
     </div>
@@ -219,12 +240,16 @@
       </div>
       <div class="col-lg-3 col-12 px-lg-3">
         <div  class="mt-4 pt-2 fs-6c fw-lighter">
-       The goal was to make a game that is easily portable and simple to use. Taking inspiration from the "game of 15" and from the old stereos, we thought of making a cube of 20cm.
+          <span class="opacity  fw-lighter">
+       The goal was to make a game that is </span>easily portable and simple to use.<span class="opacity  fw-lighter"> Taking inspiration from the "game of 15" and from the old stereos, we thought of making a cube of 20cm.
+        </span>
       </div>
       </div>
       <div class="col-lg-3 col-12 px-lg-3">
         <div  class="mt-lg-4 pt-lg-2 fs-6c fw-lighter">
+          <span class="opacity  fw-lighter">
           On the top there will be the space where the user will swipe the pieces.
+          </span>
         </div>
     </div>
     </div>
@@ -237,7 +262,9 @@
       </div>
       <div class="col-lg-3 col-12 px-lg-3">
         <div  class="mt-4 pt-2 fs-6c fw-lighter">
+          <span class="opacity  fw-lighter">
        We finally developed the final prototype and we tested it to a little group of people, it is a bit diffucult for elderly so the next step will be to insert some checkpoints and more feedbaks to help the elderly!
+        </span>
      </div>
       </div>
       <div class="col-lg-3 col-12 px-lg-3">
