add amazon work

--- a/works.html
+++ b/works.html
@@ -50,7 +50,7 @@
     <div class="pt-5">
     </div>
 
-    <!-- animus -->
+    <!-- easydream -->
     <div class="row py-5 px-md-5 px-4 text-white work" id="easydream" onclick="changePage(this)" href="index.html">
       <div class="col-lg-6 col-12 pe-md-2 ps-md-3 px-2 ">
         <img src="images/easydream.png" class="works_img">
@@ -72,6 +72,37 @@
                 User research <br>
                 UI-UX design <br>
                 Prototyping <br>
+
+              </div>
+            </div>
+        </div>
+      </div>
+    </div>
+
+    <hr class="bg-white my-0" style="opacity:1; height:1.5px"/>
+
+    <!-- Amazon -->
+    <div class="row py-5 px-md-5 px-4 text-white work" id="amazonprotected" onclick="changePage(this)" href="index.html">
+      <div class="col-lg-6 col-12 pe-md-2 ps-md-3 px-2 ">
+        <img src="images/amazon.png" class="works_img">
+      </div>
+      <div class="col-lg-6 col-12 pe-md-2 ps-md-3 px-2 d-flex align-items-stretch">
+        <div class="row">
+          <div class="col-12">
+            <div class="fs-2c mt-lg-0 mt-3">
+              Amazon learning tool - redesign </div>
+            <div class="fs-3c" >
+              How to assign training in an intuitive way </div>
+
+            <div  class="mt-2 fs-6c fw-lighter opacity">
+              Product developed in 2023 </div>
+
+            <div  class="mt-4 pt-2 fs-6c">
+                Skills: </div>
+              <div  class="fs-6c  mt-2 fw-lighter opacity" >
+                UX design <br>
+                Usability Testing <br>
+                Generative research <br>
 
               </div>
             </div>
