--- a/about.html
+++ b/about.html
@@ -41,9 +41,8 @@
 
   <!-- contact -->
   <div id="contact_container" class="contact_container_sparito display_none">
-    <div class="exit" id="exit"></div>
+    <div class="exit mb-4" id="exit"></div>
     <a class="contact_popup" href="mailto:elisamanzoni98@gmail.com">elisamanzoni98@gmail.com</a><br>
-    <a class="contact_popup" href="tel:+393486581621">3486581621</a><br>
     <a class="contact_popup" target="_blank" href="https://www.linkedin.com/in/elisa-manzoni-45919519b/">linkedin/elisamanzoni</a>
   </div>
 
@@ -78,11 +77,46 @@
         Experience </div>
     </div>
     <div class="col col-lg-6 col-12 ps-lg-3">
+    <!-- valentino -->
       <div class="row mt-2">
         <div class="col-lg-2 col-3">
           <div class="fs-6c ">
-            2020 /<br>
+            2023 /<br>
             now
+          </div>
+        </div>
+        <div class="col">
+          <div class="fs-6c">
+            Valentino
+          </div>
+          <div class="fs-7c fw-light opacity mt-1">
+            I worked in the Omnichannel team to develop the company's design system. I also worked with the CRO team to improve the UX of ecommerce by analysing metrics from Content Square.
+          </div>
+        </div>
+      </div>
+    <!-- amazon -->
+      <div class="row mt-4">
+        <div class="col-lg-2 col-3">
+          <div class="fs-6c ">
+            2022
+          </div>
+        </div>
+        <div class="col">
+          <div class="fs-6c">
+            Amazon UK - Edinburgh
+          </div>
+          <div class="fs-7c fw-light opacity mt-1">
+            Worked 6 months in the Amazon HR design team, specifically on the redesign of an the first federated Amazon learning tool. I worked with UX researcher to conduct 1:1 interviews and Usability Testing.
+I also collaborated with the Tech team, UX writer and Accessibility consultant.
+          </div>
+        </div>
+      </div>
+    <!-- denani -->
+      <div class="row mt-4">
+        <div class="col-lg-2 col-3">
+          <div class="fs-6c ">
+            2022 /<br>
+            2020
           </div>
         </div>
         <div class="col">
@@ -90,15 +124,11 @@
             Denani s.r.l.
           </div>
           <div class="fs-7c fw-light opacity mt-1">
-            <ul>
-              <li> UX/UI design of web platform</li>
-              <li> Front-end developer</li>
-              <li> Creation of brand identity </li>
-              <li> Social media management </li>
-            </ul>
+            Worked in a start-up that provides assistance to industries for digital transformation. I designed the UX of digital platforms, working with the development team with both WordPress and HTML/CSS/JavaScript.
           </div>
         </div>
       </div>
+    <!-- freelance -->
       <div class="row mt-4">
         <div class="col-lg-2 col-3">
           <div class="fs-6c ">
@@ -190,8 +220,7 @@
       <div class="row mt-2">
         <div class="col-lg-2 col-3">
           <div class="fs-6c ">
-            2020/ <br>
-            now
+            2023
           </div>
         </div>
         <div class="col">
