--- a/index.html
+++ b/index.html
@@ -37,12 +37,11 @@
       </div>
     </div>
 
-<!-- contact -->
+    <!-- contact -->
     <div id="contact_container" class="contact_container_sparito display_none">
-      <div class="exit" id="exit"></div>
+      <div class="exit mb-4" id="exit"></div>
       <a class="contact_popup" href="mailto:elisamanzoni98@gmail.com">elisamanzoni98@gmail.com</a><br>
-      <a  class="contact_popup" href="tel:+393486581621">3486581621</a><br>
-      <a  class="contact_popup" target="_blank" href="https://www.linkedin.com/in/elisa-manzoni-45919519b/">linkedin/elisamanzoni</a>
+      <a class="contact_popup" target="_blank" href="https://www.linkedin.com/in/elisa-manzoni-45919519b/">linkedin/elisamanzoni</a>
     </div>
 
 <!-- intro -->
