--- a/works.html
+++ b/works.html
@@ -82,7 +82,7 @@
     <hr class="bg-white my-0" style="opacity:1; height:1.5px"/>
 
     <!-- Amazon -->
-    <div class="row py-5 px-md-5 px-4 text-white work" id="amazonprotected" onclick="changePage(this)" href="index.html">
+    <div class="row py-5 px-md-5 px-4 text-white work" id="amazon" onclick="changePage(this)" href="index.html">
       <div class="col-lg-6 col-12 pe-md-2 ps-md-3 px-2 ">
         <img src="images/amazon.png" class="works_img">
       </div>
