--- a/about.html
+++ b/about.html
@@ -77,12 +77,28 @@
         Experience </div>
     </div>
     <div class="col col-lg-6 col-12 ps-lg-3">
+      <!-- artshell -->
+        <div class="row mt-2">
+          <div class="col-lg-2 col-3">
+            <div class="fs-6c ">
+              2023 /<br>
+              now
+            </div>
+          </div>
+          <div class="col">
+            <div class="fs-6c">
+              Artshell
+            </div>
+            <div class="fs-7c fw-light opacity mt-1">
+              Constantly analyzing and enhancing the user experience of Artshell software, a digital archive for art galleries. Also involved in creating new products for the company.
+            </div>
+          </div>
+        </div>
     <!-- valentino -->
-      <div class="row mt-2">
+      <div class="row mt-4">
         <div class="col-lg-2 col-3">
           <div class="fs-6c ">
-            2023 /<br>
-            now
+            2023
           </div>
         </div>
         <div class="col">
