--- a/works.html
+++ b/works.html
@@ -50,36 +50,38 @@
     <div class="pt-5">
     </div>
 
-    <!-- easydream -->
-    <div class="row py-5 px-md-5 px-4 text-white work" id="easydream" onclick="changePage(this)" href="index.html">
+    <!-- Artshell -->
+    <div class="row py-5 px-md-5 px-4 text-white" id="artshell">
       <div class="col-lg-6 col-12 pe-md-2 ps-md-3 px-2 ">
-        <img src="images/easydream.png" class="works_img">
+        <img src="images/artshell.png" class="works_img">
       </div>
       <div class="col-lg-6 col-12 pe-md-2 ps-md-3 px-2 d-flex align-items-stretch">
         <div class="row">
           <div class="col-12">
             <div class="fs-2c mt-lg-0 mt-3">
-              easyDream </div>
-            <div class="fs-3c" >
-              A new way to inspire people to choose their next travel destination </div>
+              Artshell Export Feature </div>
 
-            <div  class="mt-2 fs-6c fw-lighter opacity">
-              Winner project of Reply Creative Challenge 2021 </div>
+            <div  class="mt-2 fs-6c fw-lighter opacity" style="max-width:50ch">
+              As the sole UX designer at Artshell, I led the redesign of the Export feature, enhancing usability and adding customization options while implementing a new design system aligned with Artshell’s rebranding. Collaborating closely with the product manager, UI designer, and dev team, we achieved a 30% increase in feature usage following the update.
+            </div>
 
             <div  class="mt-4 pt-2 fs-6c">
-                Skills: </div>
+                Company </div>
               <div  class="fs-6c  mt-2 fw-lighter opacity" >
-                User research <br>
-                UI-UX design <br>
-                Prototyping <br>
-
+                Artshell
               </div>
+
+            <div class="fs-3c mt-5" >
+              More info soon</div>
+
+
             </div>
         </div>
       </div>
     </div>
 
     <hr class="bg-white my-0" style="opacity:1; height:1.5px"/>
+
 
     <!-- Amazon -->
     <div class="row py-5 px-md-5 px-4 text-white work" id="amazon" onclick="changePage(this)" href="index.html">
@@ -90,27 +92,56 @@
         <div class="row">
           <div class="col-12">
             <div class="fs-2c mt-lg-0 mt-3">
-              Amazon learning tool - redesign </div>
-            <div class="fs-3c" >
-              How to assign training in an intuitive way </div>
+              Amazon Learning Tool </div>
 
-            <div  class="mt-2 fs-6c fw-lighter opacity">
-              Product developed in 2023 </div>
+            <div  class="mt-2 fs-6c fw-lighter opacity" style="max-width:50ch">
+              As a UX Design Intern, I collaborated with a lead designer to redesign Amazon’s Learning Tool, focusing on usability improvements and UI consistency with Amazon’s design system. The redesign increased the System Usability Score (SUS) by 7.5 points, significantly enhancing the user experience. Thanks to these improvements, the new design was implemented and launched in January 2023.
+            </div>
 
             <div  class="mt-4 pt-2 fs-6c">
-                Skills: </div>
+                Company </div>
               <div  class="fs-6c  mt-2 fw-lighter opacity" >
-                UX design <br>
-                Usability Testing <br>
-                Generative research <br>
-
+                Amazon
               </div>
+
             </div>
         </div>
       </div>
     </div>
 
     <hr class="bg-white my-0" style="opacity:1; height:1.5px"/>
+
+    <!-- easydream -->
+    <div class="row py-5 px-md-5 px-4 text-white work" id="easydream" onclick="changePage(this)" href="index.html">
+      <div class="col-lg-6 col-12 pe-md-2 ps-md-3 px-2 ">
+        <img src="images/easydream.png" class="works_img">
+      </div>
+      <div class="col-lg-6 col-12 pe-md-2 ps-md-3 px-2 d-flex align-items-stretch">
+        <div class="row">
+          <div class="col-12">
+            <div class="fs-2c mt-lg-0 mt-3">
+              easyDream </div>
+
+            <div  class="mt-2 fs-6c fw-lighter opacity">
+              Designer of easyDream, winner project developed for the Reply Creative Challenge 2021 in a team of 4. Our goal was to enhance the customer experience in selecting their next travel destination with easyJet. Our innovative approach emphasised the experiences that travel can offer rather than simply focusing on locations. Our project won first place among 170 teams, showcasing its potential to influence easyJet’s future offerings.
+            </div>
+
+
+            <div  class="mt-4 pt-2 fs-6c">
+                Company </div>
+              <div  class="fs-6c  mt-2 fw-lighter opacity" >
+                Reply & EasyJet <br>
+                Winner project of Reply Creative Challenge 2021
+              </div>
+
+            </div>
+        </div>
+      </div>
+    </div>
+
+    <hr class="bg-white my-0" style="opacity:1; height:1.5px"/>
+
+
 
 
     <!-- animus -->
