--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
   <!-- navbar -->
   <div class="navbar">
     <div class="logo-wrapper">
-      <img class="logo" src="images/logo.png" alt="Logo" />
+      <img class="logo" src="images/Logo.png" alt="Logo" />
       <p class="nav-item logo-name"><b>M</b>anzoni <b>E</b>lisa</p>
     </div>
     <div class="navbar-item-wrapper">
@@ -81,7 +81,7 @@
   </div>
 
     <!-- work list -->
-    <div class="work-list">
+  <div class="work-list">
 
 
     <!-- Artshell -->
