--- a/index.html
+++ b/index.html
@@ -193,6 +193,41 @@
   </div>
   </div>
 
+  <div class="about">
+    <div class="about-content">
+      <div class="about-text-wrapper">
+        <div>
+          <h2 class="title-l">
+            About me
+          </h2>
+        </div>
+        <div>
+          <p class="body-sm">
+            Hi, I’m a UX designer with a love for blending art and technology, with a background in visual arts, graphic design, and front-end development. <br><span></span>
+              With a focus on B2B management tools, I thrive on simplifying complex workflows and crafting solutions that truly address users' needs. <br><span></span>
+          Outside of work, you’ll find me exploring mountains around the globe, playing volleyball, or enjoying Indian food, because, honestly, samosas > pizza (even if I’m Italian!).
+          </p>
+        </div>
+      </div>
+      <div>
+        <img src="images/about.png" alt="About" class="about-image">
+      </div>
+    </div>
+  </div>
+
+  <div class="footer">
+    <div class="footer-wrapper">
+      <div class="footer-contact">
+        <a class="footer-item" href="mailto:elisamanzoni.design@gmail.com">Email</a>
+          <div class="circle-footer"></div>
+        <a class="footer-item" href="https://www.linkedin.com/in/elisa-manzoni-design/">Linkedin</a>
+          <div class="circle-footer"></div>
+        <a class="footer-item" href="images/Manzoni_Elisa_CV_2024.pdf" target="_blank">Resume</a>
+      </div>
+      <p>Designed and coded by ME: Manzoni Elisa</p>
+    </div>
+  </div>
+
 </body>
 
 
