--- a/index.html
+++ b/index.html
@@ -47,12 +47,13 @@
 
   <!-- navbar -->
   <div class="navbar">
-    <div class="logo-wrapper">
+    <a class="logo-wrapper" href="index.html">
       <img class="logo" src="images/Logo.png" alt="Logo" />
       <p class="nav-item logo-name"><b>M</b>anzoni <b>E</b>lisa</p>
-    </div>
+    </a>
     <div class="navbar-item-wrapper">
-      <a class="nav-item" href="index.html">Portfolio</a>
+      <a class="nav-item" href="#works">Works</a>
+      <a class="nav-item" href="#about">About</a>
       <a class="nav-item"  href="images/Manzoni_Elisa_CV_2024.pdf" target="_blank">Resume</a>
       <a class="nav-item" href="mailto:elisamanzoni.design@gmail.com">Get in touch</a>
     </div>
@@ -81,7 +82,7 @@
   </div>
 
     <!-- work list -->
-  <div class="work-list">
+  <div class="work-list" id="works">
 
 
     <!-- Artshell -->
@@ -193,7 +194,7 @@
   </div>
   </div>
 
-  <div class="about">
+  <div class="about" id="about">
     <div class="about-content">
       <div class="about-text-wrapper">
         <div>
@@ -211,6 +212,69 @@
       </div>
       <div>
         <img src="images/about.png" alt="About" class="about-image">
+      </div>
+    </div>
+  </div>
+
+  <div class="moves">
+    <div class="moves-container">
+      <div>
+        <h2 class="title-l">
+          My Pokemon moves
+        </h2>
+      </div>
+      <div class="moves-wrapper">
+        <div class="moves-item-wrapper">
+          <div class="moves-title-wrapper">
+            <div>
+              <img src="images/pokemon/electro.png" alt="Electro" class="move-type">
+            </div>
+            <div>
+              <h3 class="body-m bold">
+                Collaboration Bolt
+              </h3>
+            </div>
+          </div>
+          <div>
+            <p class="body-s">
+              This move bridges the gap between development and UI design teams. It fosters alignment and accelerates the design process.
+            </p>
+          </div>
+        </div>
+        <div class="moves-item-wrapper">
+          <div class="moves-title-wrapper">
+            <div>
+              <img src="images/pokemon/rock.png" alt="Rock" class="move-type">
+            </div>
+            <div>
+              <h3 class="body-m bold">
+                System Storm
+              </h3>
+            </div>
+          </div>
+          <div>
+            <p class="body-s">
+              This move creates a flexible and scalable systems that adapt to future needs while maintaining the integrity of current projects.
+            </p>
+          </div>
+        </div>
+        <div class="moves-item-wrapper">
+          <div class="moves-title-wrapper">
+            <div>
+              <img src="images/pokemon/psych.png" alt="Psychc" class="move-type">
+            </div>
+            <div>
+              <h3 class="body-m bold">
+                Empathy Wave
+              </h3>
+            </div>
+          </div>
+          <div>
+            <p class="body-s">
+              This move guarantees that design decisions are rooted in real-world needs and data. It creates prototypes that are tested and redefined.
+            </p>
+          </div>
+        </div>
       </div>
     </div>
   </div>
