--- a/easydream.html
+++ b/easydream.html
@@ -36,11 +36,11 @@
 / __  /  __/ | | (_) | /\_/
 \/ /_/ \___|_|_|\___/  \/
 
- __    __ _                 _                     ___
-/ / /\ \ \ |__  _   _      | |__   ___ _ __ ___  / _ \
-\ \/  \/ / '_ \| | | |     | '_ \ / _ \ '__/ _ \ \// /
- \  /\  /| | | | |_| |     | | | |  __/ | |  __/   \/
-  \/  \/ |_| |_|\__, |     |_| |_|\___|_|  \___|   ()
+ __    __ _               _                     ___
+/ / /\ \ \ |__  _   _    | |__   ___ _ __ ___  / _ \
+\ \/  \/ / '_ \| | | |   | '_ \ / _ \ '__/ _ \ \// /
+ \  /\  /| | | | |_| |   | | | |  __/ | |  __/   \/
+  \/  \/ |_| |_|\__, |   |_| |_|\___|_|  \___|   ()
                 |___/
 
 -->
@@ -49,12 +49,13 @@
 
   <!-- navbar -->
   <div class="navbar">
-    <div class="logo-wrapper">
+    <a class="logo-wrapper" href="index.html">
       <img class="logo" src="images/Logo.png" alt="Logo" />
       <p class="nav-item logo-name"><b>M</b>anzoni <b>E</b>lisa</p>
-    </div>
+    </a>
     <div class="navbar-item-wrapper">
-      <a class="nav-item" href="index.html">Portfolio</a>
+      <a class="nav-item" href="index.html#works">Works</a>
+      <a class="nav-item" href="index.html#about">About</a>
       <a class="nav-item"  href="images/Manzoni_Elisa_CV_2024.pdf" target="_blank">Resume</a>
       <a class="nav-item" href="mailto:elisamanzoni.design@gmail.com">Get in touch</a>
     </div>
