--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       <a class="nav-item" href="#works">Works</a>
       <a class="nav-item" href="#about">About</a>
       <a class="nav-item"  href="images/Manzoni_Elisa_CV_2024.pdf" target="_blank">Resume</a>
-      <a class="nav-item" href="mailto:elisamanzoni.design@gmail.com">Get in touch</a>
+      <a class="nav-item" href="mailto:elisamanzoni.design@gmail.com">Email</a>
     </div>
   </div>
 
