--- a/localtracks.html
+++ b/localtracks.html
@@ -57,7 +57,7 @@
       <a class="nav-item" href="index.html#works">Works</a>
       <a class="nav-item" href="index.html#about">About</a>
       <a class="nav-item"  href="images/Manzoni_Elisa_CV_2024.pdf" target="_blank">Resume</a>
-      <a class="nav-item" href="mailto:elisamanzoni.design@gmail.com">Get in touch</a>
+      <a class="nav-item" href="mailto:elisamanzoni.design@gmail.com">Email</a>
     </div>
   </div>
 
