--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
   <meta name="viewport" width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0" />
 
+  <meta property="og:image" content="images/open-graph.png">
+  <meta property="og:image:type" content="image/png">
+  <meta property="og:image:width" content="1024">
+  <meta property="og:image:height" content="1024">
+
   <script type="text/javascript">
     (function(c, l, a, r, i, t, y) {
       c[a] = c[a] || function() {
